[tool.poetry]
name = "odb-api"
version = "1.0.0"
description = "The central API for ODB services."
authors = ["vcokltfre <vcokltfre@gmail.com>"]
license = "MIT"
repository = "https://github.com/OpenDiscordBots/odb-api"

[tool.poetry.dependencies]
python = "^3.10"
taskipy = "^1.9.0"
fastapi = "^0.72.0"
ormar = "^0.10.24"
asyncpg = "^0.25.0"
cachingutils = "^1.0.5"
uvicorn = "^0.17.0"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.5"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
pre-commit = "^2.17.0"

[tool.black]
line-length = 120

[tool.taskipy.tasks]
start = "uvicorn src.__main__:app --host 0.0.0.0 --port 8080"
watch = "uvicorn src.__main__:app --port 8080 --reload"
lint = "black . && isort --profile black ."
pre-commit = "pre-commit install"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
